syntax = "proto3";

package profiles;

service ProfilesService {
    rpc CreateProfile (Profile) returns (Profile);
    rpc GetProfileById (ProfileId) returns (Profile);
    rpc GetProfileByEmail (ProfileEmail) returns (Profile);
    rpc UpdateProfile (Profile) returns (Profile);
    rpc DeleteProfile (ProfileId) returns (Profile);
    rpc GetProfiles (Empty) returns (ProfilesList);
    rpc GetProfilesByIds (ProfileIds) returns (ProfilesList);
}

message ProfileId {
    string id = 1;
}

message ProfileIds {
    repeated string ids = 1;
}

message ProfileEmail {
    string email = 1;
}

message ProfilesList {
    repeated Profile results = 1;
}

message Profile {
    string id = 1;
    string email = 2;
    string password = 3;
    string firstName = 4;
    string lastName = 5;
    optional string gender = 6;
    optional int32 budgetMin = 7;
    optional int32 budgetMax = 8;
    optional string preferredArea = 9;

    // Lifestyle preferences (individual boolean fields)
    optional bool smoking = 10;
    optional bool petOwner = 11;
    optional bool nightOwl = 12;
    optional bool quietPerson = 13;

    optional string contactLine = 14;
    optional string contactEmail = 15;

    // Timestamp fields - changed to proper Timestamp type
    string createdAt = 16;
    string updatedAt = 17;
}

message Empty {}
